fixing squishing on profile pics

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1738,10 +1738,6 @@ p.lead strong {
 	text-align: right;
 }
 
-.small-profile-pic {
-	width: 100px;
-}
-
 #guestcalendar {
 	width: 100%;
 }
